# Navigation-App

./: CMakeLists.txt
Algorithms/Dijkstra/: DijkstraPathFinder.cpp  DijkstraPathFinder.hpp
Algorithms/Factory/: PathFinderFactory.hpp
Algorithms/Interfaces/: IPathFinder.hpp
Algorithms/Types/: AlgorithmType.hpp
Navigation/include/Core/: Intersection.hpp  Route.hpp
application/: CMakeLists.txt
application/include/application/: ApplicationBootstrap.hpp  NavigationService.hpp  RuntimeGeometryProvider.hpp
application/src/: ApplicationBootstrap.cpp  RuntimeGeometryProvider.cpp  RuntimeGeometryProvider.hpp
core/include/core/graph/: Graph.hpp
core/src/: Graph.cpp
include/Core/: Graph.hpp  RoadSegment.hpp
persistence/include/: IGraphImporter.h  IGraphSerializer.h
persistence/tests/resources/: medium.geojson  sample.json
src/: Graph.cpp
ui/: main.cpp
ui/controllers/: NavigationController.cpp  NavigationController.hpp  SceneController.cpp  SceneController.h
ui/mainwindow/: MainWindow.cpp  MainWindow.h
ui/rendering/: MapRenderer.cpp  MapRenderer.h
